# Distributed-Issue-Tracker-FastAPI-Microservices-

./: .gitignore  .graphifyignore  LICENSE  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  test_pika.py
.github/workflows/: ci-cd.yml
docker/: Dockerfile.gateway  Dockerfile.service
docs/: audit_service.json  auth_service.json  comment_service.json  core_issue_service.json  distributed_issue_tracker.md  notification_service.json  project_service.json  search_service.json  user_service.json
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
k8s/: README.md  namespace.yaml
scripts/: migrate_db.sh  seed_database.py  seed_db.sh  setup.sh
services/api-gateway/: Dockerfile  main.py  requirements.txt
services/audit-service/: Dockerfile  README.md  examples.py  pytest.ini  requirements.txt
services/audit-service/src/: config.py  database.py  main.py
services/audit-service/tests/: conftest.py  test_event_consumer.py  test_repositories.py  test_routes.py  (+2 more)
services/auth-service/: Dockerfile  README.md  TESTING.md  pytest.ini  requirements.txt
services/comment-service/: Dockerfile
services/issue-service/: Dockerfile
services/notification-service/: Dockerfile
services/project-service/: Dockerfile
services/search-service/: Dockerfile
services/user-service/: Dockerfile
shared/: requirements.txt
shared/core/: __init__.py
shared/events/: __init__.py  schemas.py
shared/schemas/: __init__.py
shared/utils/: exceptions.py
tests/: conftest.py  test_e2e_gateway.py  test_health_checks.py
(+128 files in other folders)
