# Project Configuration

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-issue-tracker"
version = "1.0.0"
description = "Cloud-native microservices-based issue management platform"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["microservices", "fastapi", "issue-tracking"]

[project.urls]
Homepage = "https://github.com/yourusername/FastApi-Issue-tracker"
Documentation = "https://github.com/yourusername/FastApi-Issue-tracker"
Repository = "https://github.com/yourusername/FastApi-Issue-tracker"
Issues = "https://github.com/yourusername/FastApi-Issue-tracker/issues"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]
known_local_folder = ["src", "shared"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "W0212",  # protected-access
    "R0913",  # too-many-arguments
]
